[package]
name = "blockchain_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
libp2p = { version = "0.52.4", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "ping",
    "macros",
    "identify",
    "async-std",
    "websocket",
    "gossipsub",
    "mdns",
    "kad",
]}
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
hex = "0.4"
ripemd = "0.1"
secp256k1 = { version = "0.24", features = ["rand", "serde"] }
rand = "0.8" 